--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <p>
+        lorem thid project
+    </p>
 
     <script src="./javascript/script.js"></script>
 </body>
